# Copia

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.toml
api/: main.py
config/: investor_profile.yaml  rules.yaml  sector_benchmarks.yaml
db/: schema.sql
db/migrations/: 002_position_lots.sql
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Card.jsx  Chip.jsx  KpiCard.jsx  Layout.jsx  PerformanceChart.jsx  PortfolioComposition.jsx  PositionDetail.jsx  PriceChart.jsx  RegimeBadge.jsx  Sidebar.jsx
frontend/src/lib/: api.js  format.js  mockData.js  utils.js
frontend/src/pages/: AIInsights.jsx  Dashboard.jsx  Portfolio.jsx  Settings.jsx
prompts/: bear.txt  bull.txt  judge.txt
scripts/: compute_outcomes.py  list_recent_debates.py  process_news.py  refresh_sector_benchmarks.py  run_debate.py  run_eod_cycle.py  run_initial_portfolio.py  run_intraday_cycle.py  scheduler.py  test_intraday_with_mock.py
src/: __init__.py  compute_snapshot.py  db.py  debate_engine.py  discovery.py  earnings_calendar.py  llm_clients.py  macro_context.py  news_pipeline.py  portfolio.py  quotes.py  rules_engine.py
tests/: __init__.py  test_rules_engine.py
